# FoundryEngine

./: .gitignore  CLONE.md  LICENSE  README.md  decisions.md  personal-notes.md
.github/workflows/: clone.yml
Foundry/: .luarc.json  2  Cargo.toml
Foundry/shaders/: compile.sh  shader.frag  shader.vert
Foundry/src/: ECS.rs  audio_manager.rs  commands.rs  components.rs  delegator.rs  game_data.rs  id_consts.rs  lua_engine.rs  main.rs  math.rs  structs.rs  test.fui  test.lua  ui_data.rs  vulkan_data.rs
FoundryNotes/.obsidian/: graph.json  workspace.json
FoundryNotes/.stfolder/: syncthing-folder-9c6834.txt
FoundryNotes/Vulkan Interactions/: Attachment.md  Command Buffer.md  Command Pool.md  Entry.md  Extent.md  Fence.md  Frame Buffer.md  Image View.md  Image.md  Instance.md  Introduction to this folder.md  Logical Device.md  Physical Device.md  Queue Families.md  Queue.md  Render Pass.md  Semaphore.md  Shader Module.md  Subpass.md  Surface Instance.md  Surface.md  Swapchain Instance.md  Swapchain.md  Useful links and resources.md
